--- a/app/globals.css
+++ b/app/globals.css
@@ -119,3 +119,29 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* For Webkit browsers like Chrome, Safari, and Edge */
+::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* Color of the track */
+  border-radius: 10px; /* Rounded corners */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the scrollbar */
+  border-radius: 10px; /* Rounded corners */
+  border: 3px solid #f1f1f1; /* Padding around the scrollbar */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the scrollbar on hover */
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin; /* Width of the scrollbar */
+  scrollbar-color: #888 #f1f1f100; /* Thumb and track color */
+}
