Enhance middleware routes, update image domains, add framer-motion dependency, and improve chat functionality with new UI elements and logging

--- a/app/globals.css
+++ b/app/globals.css
@@ -145,3 +145,30 @@
   scrollbar-width: thin; /* Width of the scrollbar */
   scrollbar-color: #888 #f1f1f100; /* Thumb and track color */
 }
+
+.skeleton {
+  * {
+    pointer-events: none !important;
+  }
+
+  *[class^='text'] {
+    color: transparent !important;
+    @apply rounded-sm bg-foreground/20 select-none animate-pulse;
+  }
+
+  *[class^='no-skeleton'] {
+    opacity: 0 !important;
+  }
+
+  input {
+    opacity: 0 !important;
+  }
+
+  .skeleton-bg {
+    @apply bg-foreground/10;
+  }
+
+  .skeleton-div {
+    @apply bg-foreground/20 animate-pulse;
+  }
+}
